[package]
name = "content-resolver"
version = "1.2.6"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
bytes = "1.5"
sha2 = "0.10"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"
